--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,6 @@
     <!-- Main content -->
     <div id="main-content">Main content</div>
     <!-- Footer -->
-    <footer id="footer">Footer</footer>
+    <footer id="footer">Footer bottom</footer>
   </body>
 </html>
